Added game edit

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@auth0/angular-jwt": "^2.0.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "moment": "^2.22.1",
+    "ngx-bootstrap": "^3.0.0",
     "ngx-facebook": "^2.4.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
