--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-bootstrap": "^3.0.0",
     "ngx-facebook": "^2.4.0",
     "rxjs": "^6.0.0",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
