--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^6.0.0",
     "@auth0/angular-jwt": "^2.0.0",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "moment": "^2.22.1",
+    "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.0.0",
     "ngx-facebook": "^2.4.0",
     "rxjs": "^6.0.0",
